verdaccio-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: verdaccio
  namespace: verdaccio
  labels:
    app: verdaccio
spec:
  selector:
    app: verdaccio
  ports:
  - port: 4873
    protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: verdaccio
  namespace: verdaccio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verdaccio
  template:
    metadata:
      labels:
        app: verdaccio
    spec:
      containers:
      - name: verdaccio
        image: your-image-registry/verdaccio-ldap:4.9.1
        ports:
        - containerPort: 4873
        volumeMounts:
        - name: verdaccio-data
          mountPath: /verdaccio/storage
        - name: verdaccio-conf
          mountPath: /verdaccio/conf/config.yaml
          subPath: config.yaml
      volumes:
        - name: verdaccio-data
          persistentVolumeClaim:
            claimName: verdaccio
        - name: verdaccio-conf
          configMap:
            name: verdaccio
